# superdev-fellowship

./: Readme.md
cus-derive-macro/: Cargo.toml  Readme.md
cus-derive-macro/serialize_macro/src/: lib.rs
cus-derive-macro/serialize_macro_traits/: Cargo.toml
cus-derive-macro/serialize_macro_traits/src/: lib.rs
src/: main.rs
week1/: Readme.md
week1/assignment-2-5/: Readme.md
week1/assignment-2-5/anchor/: week-1-assignment-3.patch  week-1-assignment-4.patch
week1/assignment-2-5/anchor/lang/syn/src/parser/accounts/: constraints.rs
week1/assignment-2-5/program/: Cargo.toml
week1/assignment-2-5/program/src/: lib.rs
week1/assignment1/: solution3.patch
week1/assignment1/traity_trait/src/: lib.rs
week1/assignments/: Readm.md
week1/cus-derive-macro/serialize_macro_traits/src/: lib.rs
week1/learning/cus-derive-macro/: Readme.md
week1/learning/cus-derive-macro/serialize_macro/: Cargo.toml
week1/learning/cus-derive-macro/serialize_macro_traits/: Cargo.toml
week1/learning/rust/: Readme.md
